Edited About Text

--- a/about.html
+++ b/about.html
@@ -52,8 +52,8 @@
       <div class="text">Thanks for checking out my website!</div>
 
       I am currently majoring in mechanical engineering and minoring in computer
-      science student at the University of Pennsylvania. I have a passion for
-      working outside of my comfort zone and learning new things.
+      science at the University of Pennsylvania. I have a passion for working
+      outside of my comfort zone and learning new things.
 
       <div class="text">Email: bencabt@seas.upenn.edu</div>
 
